--- a/application/views/src/index.scss
+++ b/application/views/src/index.scss
@@ -1,6 +1,64 @@
-
 @import "~bootstrap/scss/bootstrap";
 
-h1 {
-	color: red;
+.text-center {
+    text-align: center!important;
 }
+
+body {
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
+}
+
+#login {
+	.form-signin {
+	    width: 100%;
+	    width: 330px;
+	    padding: 15px;
+	    margin: 0 auto;
+	}
+
+	.mb-3, .my-3 {
+	    margin-bottom: 1rem!important;
+	}
+
+	button[type="submit"] {
+		margin-top: 30px;
+	}
+
+	.form-signin input[type="password"] {
+	    margin-bottom: 10px;
+	    border-top-left-radius: 0;
+	    border-top-right-radius: 0;
+	}
+
+	.form-signin input[type="email"] {
+	    margin-bottom: -1px;
+	    border-bottom-right-radius: 0;
+	    border-bottom-left-radius: 0;
+	}
+
+	.form-signin .form-control {
+	    position: relative;
+	    box-sizing: border-box;
+	    height: auto;
+	    padding: 10px;
+	    font-size: 16px;
+	}
+}
+
+
+
+
+
+
+
