--- a/application/views/src/index.scss
+++ b/application/views/src/index.scss
@@ -19,6 +19,10 @@ body {
     background-color: #f5f5f5;
 }
 
+.m-r-15 {
+	margin-right: 15px;
+}
+
 #login {
 	.form-signin {
 	    width: 100%;
@@ -54,6 +58,42 @@ body {
 	    height: auto;
 	    padding: 10px;
 	    font-size: 16px;
+	}
+}
+
+#dash {
+    width: 1080px;
+    background: #fff;
+    padding: 30px;
+    overflow: hidden;
+
+	h3 {
+		margin: 50px auto 30px;
+	}
+
+	.classes, .students {
+		float: left;
+		width: 345px;
+	}
+
+	.classes {
+		margin-right: 85px;
+	}
+
+	.card {
+		margin-bottom: 20px;
+	}
+
+	.tab-content {
+	    padding-top: 30px;
+	}
+
+	.tab-pane {
+		overflow: hidden;
+	}
+
+	.open-sub {
+		margin-top: 30px;
 	}
 }
 
