--- a/application/views/src/index.scss
+++ b/application/views/src/index.scss
@@ -99,6 +99,18 @@ body {
 	}
 }
 
+#grading {
+	textarea {
+		padding-top: 25px;
+		border: none;
+		resize: none;
+	}
+
+	.files {
+		margin-top: 25px;
+	}
+}
+
 
 
 
